# schwung-amy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  chain_params.json  release.json  ui_hierarchy.json
.github/workflows/: release.yml
data/: Move Organ.helm
scripts/: Dockerfile  build.sh  install.sh
src/: help.json  module.json  ui.js  web_ui.html
src/dsp/: amy_plugin.cpp  preset_names.h  test_json.cpp
